deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-sentinel
  namespace: sentinel
  labels:
    app.kubernetes.io/name: k8s-sentinel
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: k8s-sentinel
  ports:
    - name: https-webhook
      port: 443
      targetPort: 8443
      protocol: TCP
